fix: hide scrollbar, adjust margins

--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@ body {
   font-family: Arial, sans-serif; /* The font used in current menu */
   max-width: 1600px; /* Adjust width of the table if needed */
   width: auto;
+  scrollbar-width: none;
 }
 
 h2 {
@@ -53,7 +54,7 @@ td {
 
 /* Footer text template */
 p {
-  margin-top: 40px;
+  margin-top: 20px;
   padding: 5px;
   clear: left;
   text-align: center;
@@ -82,6 +83,7 @@ p a:hover {
 
 ::-webkit-scrollbar {
   width: 6px;
+  display: none;
 }
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
